# stay-awake2

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
