[package]
name = "stay-awake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
colored = { version = "2" }
windows = { version = "0.34", features = ["Win32_System_Power"]}